[package]
name    = "xcb-util"
version = "0.4.0"

authors = ["meh. <meh@schizofreni.co>"]
license = "MIT"

description = "Rust bindings and wrappers for XCB utility functions."
repository  = "https://github.com/meh/rust-xcb-util"
keywords    = ["x11", "xcb"]

[dependencies]
xcb  = "1.2.0"
xcb-util-sys = { version = "0.1.0", path = "xcb-util-sys" }

[features]
ewmh    = ["xcb-util-sys/ewmh"]

cursor  = []
icccm   = []
image   = []
keysyms = []
misc    = ["icccm"]
render  = ["xcb/render"]

shm    = ["xcb/shm"]
thread = []

static = []

[package.metadata.docs.rs]
all-features = true
